welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:1: error: Missing closing brace `}' assumed here
def DogHouse()
^MethodsDogHouse:2: error: expected class or object definition
{
^